@@ -15,6 +15,8 @@ Release 0.19.1 - Unreleased
    HBASE-1142  Cleanup thrift server; remove Text and profuse DEBUG messaging
                (Tim Sell via Stack)
    HBASE-1211  NPE in retries exhausted exception
+   HBASE-1233  Transactional fixes: Overly conservative scan read-set,
+               potential CME (Clint Morgan via Stack)
 
   IMPROVEMENTS
    HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
